--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Tu imagen -->
 				<a href="#" class="image avatar"><img src=Lauracampos.github.io/images/laura facebook.jpg" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>Escribe tu nombre</strong>, tu perfil.<br />
+				<h1><strong>Laura Campos</strong>, tu perfil.<br />
 			</header>
 
 		<!-- Contenido principal -->
@@ -23,10 +23,10 @@
 					<section id="one">
 						<header class="major">
 							<!-- Tu perfil - Título -->
-							<h2>Tu perfil - Título.</h2>
+							<h2>laura campos.</h2>
 						</header>
 						<!-- Tu perfil - Tecnico en sistemas -->
-						<p>A lo largo de mi carrera profesional, siempre me he destacado por crear, compartir y ejecutar campañas de marketing online, principalmente en diferentes corporativos.</p>
+						<p>Soy  un instrumento que solo quiere cumplir.EL para que fui creada ser trazadora de la idea que crea cambios.</p>
 						<ul class="actions">
 							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
