--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar"><img src=https://raw.githubusercontent.com/lauracampos/Lauracampos.github.io/master/images/laura%20facebook.jpg" /></a>
+				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/lauracampos/Lauracampos.github.io/master/images/laura%20facebook.jpg"/></a>
 				<!-- Tu perfil -->
 				<h1><strong>Laura Campos</strong>, tu perfil.<br />
 			</header>
